use var not const

--- a/.github/workflows/generate-readme.yml
+++ b/.github/workflows/generate-readme.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           script: |
             // get all closed pull requests for this repo
-            const commitMessages = ""
+            var commitMessages = ""
             const pulls = await github.pulls.list({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -53,10 +53,10 @@ jobs:
             });
             // create and export the concatenated commit messages
             for (var i = 0; i < pullCommits.data.length; i++) {
-              // commitMessages = commitMessages + "\n - " + pullCommits.data[i].commit.message
-              console.log(" - " + pullCommits.data[i].commit.message)
+              commitMessages = commitMessages + "\n - " + pullCommits.data[i].commit.message
+              //console.log(" - " + pullCommits.data[i].commit.message)
             }
-            // console.log(`Commit Message: ${commitMessages}`);
+            console.log(`Commit Message: ${commitMessages}`);
 
             // core.exportVariable('COMMITMESSAGES', `${commitMessages}`);
         
