use var for email message text

--- a/.github/workflows/generate-readme.yml
+++ b/.github/workflows/generate-readme.yml
@@ -58,13 +58,13 @@ jobs:
             }
             console.log(`Commit Message: ${commitMessages}`);
 
-            // core.exportVariable('COMMITMESSAGES', `${commitMessages}`);
+            core.exportVariable('COMMITMESSAGES', `${commitMessages}`);
         
       - uses: Keyfactor/add-and-commit@v7.5.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           add: README.md --force
-          message: Replace with CommitMessages var
+          message: ${{ env.COMMITMESSAGES }}
           author_name: Keyfactor
           author_email: keyfactor@keyfactor.github.io
