--- a/.github/workflows/keyfactor-sign-files.yml
+++ b/.github/workflows/keyfactor-sign-files.yml
@@ -45,6 +45,7 @@ jobs:
         uses: oprypin/find-latest-tag@v1
         with:
           repository: ${{ github.repository_owner }}/${{ inputs.targetRepo }}  
+          token: ${{ secrets.CODESIGN_TOKEN }}
           releases-only: true  
         id: latestReleaseTag  
 
