--- a/.github/workflows/dotnet-build-and-release.yml
+++ b/.github/workflows/dotnet-build-and-release.yml
@@ -28,9 +28,11 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Setup dotnet
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '3.1.x'
+          dotnet-version: |
+            3.1.x
+            6.0.x
 
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1
